--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -24,8 +24,9 @@ jobs:
         
     - name: Build and push Docker images
       run: |
-        docker build -t ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:test .
-        docker push ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:test
+        IMAGE_NAME_LOWER=$(echo "${{ env.IMAGE_NAME }}" | tr '[:upper:]' '[:lower:]')
+        docker build -t ${{ env.REGISTRY }}/${IMAGE_NAME_LOWER}:test .
+        docker push ${{ env.REGISTRY }}/${IMAGE_NAME_LOWER}:test
         
     - name: Deploy to Test
       uses: appleboy/ssh-action@master
