--- a/package.json
+++ b/package.json
@@ -14,11 +14,19 @@
     "test": "jest",
     "format": "prettier --write \"**/*.{ts,tsx,md}\""
   },
+  "dependencies": {
+    "next": "14.0.4",
+    "react": "18.2.0",
+    "react-dom": "18.2.0"
+  },
   "devDependencies": {
-    "turbo": "^1.10.0",
-    "prettier": "^3.0.0",
-    "next": "^14.0.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "@types/node": "20.10.5",
+    "@types/react": "18.2.45",
+    "@types/react-dom": "18.2.18",
+    "typescript": "5.3.3",
+    "turbo": "1.10.16",
+    "prettier": "3.1.1",
+    "eslint": "8.56.0",
+    "eslint-config-next": "14.0.4"
   }
 }
