--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -6,7 +6,7 @@ on:
 
 env:
   REGISTRY: ghcr.io
-  IMAGE_NAME: ${{ github.repository | lower }}
+  IMAGE_NAME: ${{ github.repository }}
 
 jobs:
   deploy-test:
@@ -30,7 +30,7 @@ jobs:
       with:
         context: .
         push: true
-        tags: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:test
+        tags: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}/test:latest
         cache-from: type=gha
         cache-to: type=gha,mode=max
         
@@ -68,7 +68,7 @@ jobs:
           version: '3.8'
           services:
             app:
-              image: ghcr.io/${GITHUB_REPOSITORY}:test
+              image: ghcr.io/${GITHUB_REPOSITORY}/test:latest
               restart: always
               environment:
                 - NODE_ENV=test
