--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,7 +8,7 @@ on:
 
 env:
   REGISTRY: ghcr.io
-  IMAGE_NAME: ${{ github.repository_owner }}/launchpadai
+  IMAGE_NAME: ${{ github.repository_owner }}/launchpad-ai
 
 jobs:
   build:
